# 3D_Viewer

./: CMakeLists.txt  conandata.yml  imgui.ini  pag03-fs-directionalLightShader.glsl  pag03-fs-puntualLightShader.glsl  pag03-fs-spotLightShader.glsl  pag03-fs.glsl  pag03-vs-luzDireccional.glsl  pag03-vs-luzPuntual.glsl  pag03-vs-luzSpot.glsl  pag03-vs.glsl
program/: Camara.cpp  Camara.h  Estructuras.h  EstructurasLuces.h  FileLoader.cpp  FileLoader.h  GestorModelos.cpp  GestorModelos.h  Luz.cpp  Luz.h  MallaModelo.cpp  MallaModelo.h  Modelos.cpp  Modelos.h  Renderer.cpp  Renderer.h  ShaderHandler.cpp  ShaderHandler.h  main.cpp  singleton_template.h
